# eNPI-Portfolio-Simulation

./: .gitignore  AUTHORS.txt  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  test.py
resources/: project_results.xlsx  projects.xlsx
resources/tests/: projects_test.xlsx
src/: data.py  file_handling.py  probability.py  project.py  project_manager.py  risk.py  simulation.py  strategy.py  year.py
src/utils/: constants.py  project_utils.py
tests/: file_test.py  optimal_manager_test.py  project_test.py  sell_optimal_test.py
